# nba-total-points-prediction-model

./: .env  .gitattributes  .gitignore  README.md  api_fetcher.py  model architecutre.docx  pyproject.toml  requirements.txt  run.py
docs/: architecture.md
notebooks/: MiniNN.ipynb  Untitled-1.ipynb  best_basketball_model.pth  best_nba_model.pth  best_nba_transformer.pth  elo system.ipynb  elo system_updated.ipynb  modelnba — skrót.lnk  nba-data-exploring.ipynb  nba-embedding-model-testing.ipynb  nba-feature-engineering-1.ipynb  nba-model-testing-2.ipynb  nba-model-testing.ipynb  nba-sandbox.ipynb  nba-team-data-exploration-1.ipynb  nba-team-data-exploration-2.ipynb  nba-team-data-exploration-3.ipynb  nba-team-data-exploration.ipynb  nba-team-embedding.ipynb  nba-team-embedding_test.ipynb  nba_transformer.pth  player_embeddings.ipynb  playerstatstest.ipynb  ratings.ipynb  seq_model.ipynb
src/: api_fetcher.py
src/api/: __init__.py  api_config.py  fetcher.py  main.py  server.py  startup.py
src/api/core/: config.py  db.py
src/api/data_processing/: __init__.py  box_score_advanced.py  data_processing.py  league_game_log.py  player_stats.py  src — skrót.lnk
src/api/db/: __init__.py  engine.py
src/api/endpoints/: __init__.py  (+4 more)
src/cache/: boxscore_2024_2025.json
src/data/: __init__.py  api_fetcher.py  data_preparation.py  team_embedding_vectors.py  time_series_dataset.py
src/model/: __init__.py  embeddings_train.py  team_embeddings.py  team_stats_model.py
src/neo_api/: server.py
src/pipeline/: pipeline_data.py
src/utils/: __init__.py  distribution.py
(+27 files in other folders)
